Replace ant with maven; update dependencies